--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@antv/g2plot": "^2.3.6",
     "ant-design-vue": "^1.5.5",
     "axios": "^0.19.0",
-    "core-js": "^2.6.5",
+    "core-js": "^2.6.12",
     "enquire.js": "^2.1.6",
     "express": "^4.17.1",
     "js-cookie": "^2.2.0",
@@ -33,6 +33,8 @@
   "devDependencies": {
     "@ant-design/colors": "^3.1.0",
     "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-flow": "^7.12.1",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-plugin-unit-jest": "^3.7.0",
