--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --mode preview",
+    "build": "vue-cli-service build --mode production",
     "build:preview": "vue-cli-service build --mode preview",
-    "production": "node server/server.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
