--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@antv/g2plot": "^2.3.6",
+    "@textbus/textbus": "^1.1.0",
     "ant-design-vue": "^1.5.5",
     "axios": "^0.19.0",
     "core-js": "^2.6.12",
@@ -19,13 +20,14 @@
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
     "md5": "^2.2.1",
+    "mermaid": "^8.13.2",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
+    "quill": "^1.3.7",
     "vue": "^2.5.22",
     "vue-clipboard2": "^0.2.1",
     "vue-cropper": "0.4.4",
     "vue-ls": "^3.2.0",
-    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
