--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
     "quill": "^1.3.7",
+    "vditor": "^3.8.7",
     "vue": "^2.5.22",
     "vue-clipboard2": "^0.2.1",
     "vue-cropper": "0.4.4",
@@ -51,6 +52,7 @@
     "less-loader": "^4.1.0",
     "opencollective": "^1.0.3",
     "opencollective-postinstall": "^2.0.2",
+    "sass-loader": "^12.2.0",
     "vue-template-compiler": "^2.5.22",
     "webpack-theme-color-replacer": "^1.2.15"
   },
