--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode preview",
+    "dev": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build --mode production",
     "build:preview": "vue-cli-service build --mode preview",
     "lint": "vue-cli-service lint"
