--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build --mode production",
     "build:preview": "vue-cli-service build --mode preview",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "report": "vue-cli-service build --report"
   },
   "dependencies": {
     "@antv/g2plot": "^2.3.6",
@@ -54,6 +55,7 @@
     "opencollective-postinstall": "^2.0.2",
     "sass-loader": "^12.2.0",
     "vue-template-compiler": "^2.5.22",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-theme-color-replacer": "^1.2.15"
   },
   "eslintConfig": {
